--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
     <title>page2</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=582"/>
+    <meta name="viewport" content="width=540"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
@@ -51,6 +51,28 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- Unnamed (内联框架) -->
+      <div id="u86" class="ax_default">
+        <iframe id="u86_input" scrolling="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u87" class="ax_default">
+        <div id="u87_state0" class="panel_state" data-label="State1">
+          <div id="u87_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (图片) -->
+            <div id="u88" class="ax_default image selected">
+              <img id="u88_img" class="img " src="images/page2/u88.png"/>
+              <!-- Unnamed () -->
+              <div id="u89" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
