--- a/page1.html
+++ b/page1.html
@@ -287,7 +287,7 @@
 
       <!-- Unnamed (文本框) -->
       <div id="u51" class="ax_default text_field">
-        <input id="u51_input" type="text" value="张"/>
+        <input id="u51_input" type="text" value="****"/>
       </div>
 
       <!-- Unnamed (图片) -->
